Fixed most bugs except double appear of rating view and searching for countries

--- a/Safar.xcodeproj/xcshareddata/xcschemes/safar.xcscheme
+++ b/Safar.xcodeproj/xcshareddata/xcschemes/safar.xcscheme
@@ -18,7 +18,7 @@
                BlueprintIdentifier = "64C360942E13632A00CA5CE5"
                BuildableName = "Safar.app"
                BlueprintName = "Safar"
-               ReferencedContainer = "container:safar.xcodeproj">
+               ReferencedContainer = "container:Safar.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -38,7 +38,7 @@
                BlueprintIdentifier = "64C360A12E13632B00CA5CE5"
                BuildableName = "SafarTests.xctest"
                BlueprintName = "SafarTests"
-               ReferencedContainer = "container:safar.xcodeproj">
+               ReferencedContainer = "container:Safar.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
@@ -49,7 +49,7 @@
                BlueprintIdentifier = "64C360AB2E13632B00CA5CE5"
                BuildableName = "SafarUITests.xctest"
                BlueprintName = "SafarUITests"
-               ReferencedContainer = "container:safar.xcodeproj">
+               ReferencedContainer = "container:Safar.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,7 +71,7 @@
             BlueprintIdentifier = "64C360942E13632A00CA5CE5"
             BuildableName = "Safar.app"
             BlueprintName = "Safar"
-            ReferencedContainer = "container:safar.xcodeproj">
+            ReferencedContainer = "container:Safar.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <EnvironmentVariables>
@@ -95,7 +95,7 @@
             BlueprintIdentifier = "64C360942E13632A00CA5CE5"
             BuildableName = "Safar.app"
             BlueprintName = "Safar"
-            ReferencedContainer = "container:safar.xcodeproj">
+            ReferencedContainer = "container:Safar.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
