--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/Safar/Data/cities.sqlite
-/Safar/Data/countries.sqlite
-/Safar/Data/Assets.xcassets
+safar/Safar/Data/cities.sqlite
+safar/Safar/Data/countries.sqlite
+safar/Safar/Data/Assets.xcassets
