Ignore SQLite database files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,1 @@
-safar/Safar/Data/cities.sqlite
-safar/Safar/Data/countries.sqlite
-safar/Safar/Data/Assets.xcassets
+safar/Safar/Data/Assets.xcassetsSafar/Data/*.sqlite
