--- a/Safar/Info.plist
+++ b/Safar/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UNSPLASH_ACCESS_KEY</key>
+	<string>$(UNSPLASH_ACCESS_KEY)</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
